--- a/public/css/style.css
+++ b/public/css/style.css
@@ -103,32 +103,45 @@ html, body {
 }
 
 .overlay {
-  position: absolute;
-  top: 0; /* Corrected from top: 100; */
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.35);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 2;
-}
+      position: absolute;
+      top: 50%;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      padding: 0 15%;
+      transform: translateY(-50%);
+      box-sizing: border-box;
+       z-index: 2; /* on top of slides */
+    }
 
-.overlay button {
-  margin-top: 150px; /* Corrected from margin-top: 150px; */
-  padding: 1rem 2rem;
-  font-size: 1.5rem;
-  background-color: #F5F5DC;
-  color: #2E7D32;
-  border: none;
-  border-radius: 12px;
-  cursor: pointer;
-  font-weight: bold;
-  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.3);
-  transition: background-color 0.3s;
-}
+    .login-btn1 {
+      padding: 15px 30px;
+      font-size: 18px;
+      background-color: #4CAF50;
+      color: white;
+      border: none;
+      cursor: pointer;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+    }
 
-.overlay button:hover {
-  background-color: #dce775;
-}
+    .login-btn1:hover {
+      background-color: #388E3C;
+    }
+
+
+
+    .login-btn2 {
+      padding: 15px 30px;
+      font-size: 18px;
+      background-color: rgba(0, 102, 255, 0.469);
+      color: white;
+      border: none;
+      cursor: pointer;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+    }
+
+    .login-btn2:hover {
+      background-color: #386d8e;
+    }
